--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,11 @@
-Package: dynplot
+Package: dynplot2
 Type: Package
-Title: Plotting single-cell trajectories
+Title: Grammar of graphics for single-cell data
 Version: 1.0.0.9000
 Authors@R: c(
   person("Robrecht", "Cannoodt", email = "rcannood@gmail.com", role = c("aut")),
   person("Wouter", "Saelens", email = "wouter.saelens@gmail.com", role = c("aut", "cre")))
-Description: Package that create ggplot2 plots of single-cell trajectories. This can be
-            the trajectory topology itself, projected onto a dimensionality reduction,
-            using a heatmap, or a comparison between two trajectories.
+Description: Package that create ggplot2 plots of single-cell datasets.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -26,20 +24,17 @@ Imports:
   GA,
   ggbeeswarm,
   ggplot2 (>= 3.0),
-  ggnewscale,
   ggraph,
   ggrepel,
   igraph,
   MASS,
   magrittr,
   methods,
-  pdist,
   purrr,
   rje,
   shades,
   RColorBrewer,
   reshape2,
-  stringr,
   testthat,
   tibble,
   tidyr,
@@ -47,8 +42,6 @@ Imports:
   vipor,
   viridis
 Suggests:
-  cobs,
-  destiny,
   knitr,
   rmarkdown
 Remotes: 
