--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: dynplot2
 Type: Package
 Title: Grammar of graphics for single-cell data
-Version: 1.0.0.9000
+Version: 1.0.0
 Authors@R: c(
   person("Robrecht", "Cannoodt", email = "rcannood@gmail.com", role = c("aut")),
   person("Wouter", "Saelens", email = "wouter.saelens@gmail.com", role = c("aut", "cre")))
@@ -44,10 +44,10 @@ Imports:
 Suggests:
   knitr,
   rmarkdown
-Remotes: 
-  dynverse/dynutils@devel,
-  dynverse/dyndimred@devel,
-  dynverse/dynwrap@devel,
-  dynverse/dynfeature@devel
+Remotes:  
+    dynverse/dynutils@master,
+    dynverse/dyndimred@master,
+    dynverse/dynwrap@master,
+    dynverse/dynfeature@master
 VignetteBuilder: knitr
 Roxygen: list(markdown = TRUE)
